--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "typespeed",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://stoyanmanolov.github.io/typespeed",
   "dependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -18,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
