--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "http://stoyanmanolov.github.io/typespeed",
   "dependencies": {
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "gh-pages": "^3.1.0",
     "jest": "^24.9.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -20,6 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
