--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.3",
     "react-test-renderer": "^16.13.1",
     "semantic-ui-react": "^0.88.2"
   },
